# animal_tracker

./: .cursorrules  .gitignore  CLAUDE.md  IMPLEMENTATION_PROMPT.md  LICENSE  README.md  network-watchdog.service  pyproject.toml  requirements-dev.txt  requirements.txt  wildlife-camera.service  wildlife-deploy.service  wildlife-deploy.timer  wildlife-feedback.service  wildlife-loop.service  wildlife-loop.timer
configs/: 99-wifi-stability.conf
docs/: ADR-001-speciesnet-integration.md  ADR-002-two-stage-detection-pipeline.md  ADR-003-multi-frame-burst-capture.md  ADR-004-autonomous-tuning-loop.md  API_RESEARCH.md  ARCHITECTURE.md  MEDIAMTX_STREAMING_GUIDE.md  phase1-spec.md
experiments/: JOURNAL.md  LEARNINGS.md  PROTOCOL.md  loop.md  state.json
scripts/: camera_preview.py  capture_test.py  color_test.py  direct_capture_test.py  network_watchdog.sh  test_burst_capture.py  test_classification.py  test_feedback_e2e.py  test_image_capture.py  test_speciesnet_filter.py  test_squirrel.py  test_telegram.py  test_wildlife_pipeline.py
src/: camera_manager.py  config.py  data_models.py  database_manager.py  exceptions.py  feedback_protocol.py  models.py  motion_detector.py  notification_service.py  resource_manager.py  species_identifier.py  telegram_feedback.py  telegram_service.py  timelapse_writer.py  utils.py  wildlife_camera.py  wildlife_detector.py  wildlife_system.py
tests/: conftest.py  test_burst_cleanup.py  test_camera_manager.py  test_config.py  test_database_manager.py  test_database_manager_simple.py  test_detection_status.py  test_feedback_protocol.py  (+21 more)
(+26 files in other folders)
