[project]
name = "animal-tracker"
version = "0.1.0"
description = "Raspberry Pi wildlife camera with AI species identification"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot==20.7",
    "picamera2==0.3.16",
    "opencv-python>=4.10.0",
    "numpy>=2.1.0",
    "python-dotenv==1.0.0",
    "psutil==5.9.5",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "speciesnet>=0.1.0",
    "ml-dtypes>=0.5.0",
    "pydantic-settings>=2.12.0",
]
